--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.2",
+    "@react-spring/web": "^9.7.5",
     "@shadcn/ui": "^0.0.4",
     "@tabler/icons-react": "^3.31.0",
     "@tsparticles/engine": "^3.8.1",
@@ -30,19 +32,24 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "formstash": "^1.0.4",
     "framer-motion": "^12.6.3",
     "jszip": "^3.10.1",
     "lucide-react": "^0.453.0",
     "motion": "^12.6.3",
+    "ogl": "^1.0.11",
+    "postprocessing": "^6.37.2",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-markdown": "^10.0.1",
     "react-router-dom": "^6.27.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
